--- a/blachisserie-ui/package.json
+++ b/blachisserie-ui/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@microsoft/signalr": "^9.0.6",
     "jwt-decode": "^4.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^17.18.15",
